--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Getting Started Example",
-  "description": "Build an Extension!",
+  "name": "Stimulating Split Screen",
+  "description": "Watch satisfying videos next to anything you want!",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
@@ -9,17 +9,17 @@
   "permissions": [ "activeTab", "system.display"],
   "action": {
     "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+      "16": "/images/split_16.png",
+      "32": "/images/split_32.png",
+      "64": "/images/split_64.png",
+      "128": "/images/split_128.png"
     }
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
+    "16": "/images/split_16.png",
+    "32": "/images/split_32.png",
+    "64": "/images/split_64.png",
+    "128": "/images/split_128.png"
   },
   "options_page": "options.html"
 }
